--- a/users/templates/header.html
+++ b/users/templates/header.html
@@ -1,12 +1,12 @@
 <!-- Header Section -->
 <header class="bg-blue-500 text-white py-8">
-    <div class="container mx-auto flex justify-between items-center">
+    <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
         <!-- Logo -->
         <a href="#" class="text-3xl font-bold">StashCodes</a>
 
         <!-- Navigation Links -->
-        <nav>
-            <ul class="flex space-x-4">
+        <nav class="mt-4 md:mt-0">
+            <ul class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
                 <li><a href="#" class="hover:underline">Home</a></li>
                 <li><a href="#" class="hover:underline">About</a></li>
                 <li><a href="#" class="hover:underline">Services</a></li>
