--- a/users/templates/contact.html
+++ b/users/templates/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     {% include "header.html" %}
-    <div class="container mx-auto px-4 md:px-0">
+    <div class="container mx-auto px-4 md:px-0 flex justify-center">
         <h1 class="text-2xl md:text-4xl font-bold mb-4">Contact Us</h1>
         <form action="/contact_us/" method="post" class="w-full max-w-lg">
             {% csrf_token %}
