--- a/users/templates/contact.html
+++ b/users/templates/contact.html
@@ -9,7 +9,7 @@
 <body>
     {% include "header.html" %}
     <div class="container mx-auto px-4 md:px-0 flex justify-center">
-        <h1 class="text-2xl md:text-4xl font-bold mb-4">Contact Us</h1>
+        <h1 class="text-2xl md:text-4xl font-bold mb-4">Contact Us</h1><br>
         <form action="/contact_us/" method="post" class="w-full max-w-lg">
             {% csrf_token %}
             <div class="flex flex-wrap -mx-3 mb-6">
@@ -46,6 +46,7 @@
             </div>
         </form>
     </div>
+    <br><br>
     {% include "footer.html" %}
 </body>
 </html>
