--- a/users/templates/header.html
+++ b/users/templates/header.html
@@ -10,7 +10,7 @@
                 <li><a href="#" class="hover:underline">Home</a></li>
                 <li><a href="#" class="hover:underline">About</a></li>
                 <li><a href="#" class="hover:underline">Services</a></li>
-                <li><a href="#" class="hover:underline">Contact</a></li>
+                <li><a href="{% url "contact" %}" class="hover:underline">Contact</a></li>
             </ul>
         </nav>
     </div>
