--- a/users/templates/contact.html
+++ b/users/templates/contact.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     {% include "header.html" %}
-    <div class="container mx-auto px-4 md:px-0 flex justify-center">
-        <h1 class="text-2xl md:text-4xl font-bold mb-4">Contact Us</h1><br>
-        <form action="/contact_us/" method="post" class="w-full max-w-lg">
-            {% csrf_token %}
+    <div class="container mx-auto px-4 md:px-0">
+        <div class="w-full max-w-lg mx-auto">
+            <h1 class="text-2xl md:text-4xl font-bold mb-4">Contact Us</h1>
+            <form method="post">
             <div class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full px-3">
                     <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="name">
@@ -33,7 +33,7 @@
                     <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="message">
                         Message
                     </label>
-                    <textarea class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" id="message" name="message" required></textarea>
+                    <textarea class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white h-40" id="message" name="message" required></textarea>
                 </div>
             </div>
             <div class="md:flex md:items-center">
