--- a/users/templates/header.html
+++ b/users/templates/header.html
@@ -7,9 +7,9 @@
         <!-- Navigation Links -->
         <nav class="mt-4 md:mt-0">
             <ul class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-                <li><a href="#" class="hover:underline">Home</a></li>
-                <li><a href="#" class="hover:underline">About</a></li>
-                <li><a href="#" class="hover:underline">Services</a></li>
+                <li><a href="{% url "home" %}" class="hover:underline">Home</a></li>
+                <li><a href="#about" class="hover:underline">About</a></li>
+                <li><a href="#services" class="hover:underline">Services</a></li>
                 <li><a href="{% url "contact" %}" class="hover:underline">Contact</a></li>
             </ul>
         </nav>
