--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <style>
+        
         .ml2 {
             font-weight: 900;
             font-size: 3.2em;
@@ -53,7 +54,7 @@
 
 
     <!-- Who We Are Section -->
-    <section class="container mx-auto py-8" id="about">
+    <section class="container mx-auto py-8 px-4" id="about">
         <div class="text-center">
             <h2 class="text-2xl font-semibold mb-4">Who We Are</h2>
             <p class="text-lg mb-8">
@@ -66,7 +67,7 @@
     </section>
 
     <!-- Services Section -->
-    <section class="container mx-auto py-8" id="services">
+    <section class="container mx-auto py-8 px-4" id="services">
         <div class="text-center">
             <h2 class="text-2xl font-semibold mb-4">Internship Positions</h2>
             <p class="text-lg mb-8">
