--- a/users/templates/apply.html
+++ b/users/templates/apply.html
@@ -7,7 +7,7 @@
     <!-- Include Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 p-4">
+<body class="bg-gray-100">
     {% include "header.html" %}
     <main class="container mx-auto p-4">
         <h1 class="text-3xl font-bold text-center mb-8">StashCodes Internship Application</h1>        
