--- a/users/templates/header.html
+++ b/users/templates/header.html
@@ -1,16 +1,25 @@
 <!-- Header Section -->
 <header class="bg-blue-500 text-white py-8 px-4">
-    <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
+    <div class="container mx-auto flex flex-wrap items-center justify-between">
         <!-- Logo -->
-        <a href="{% url "home" %}" class="text-3xl font-bold">StashCodes</a>
+        <a href="{% url "home" %}" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="StashCodes Logo" />
+            <span class="self-center text-2xl font-semibold whitespace-nowrap">StashCodes</span>
+        </a>
 
         <!-- Navigation Links -->
-        <nav class="mt-4 md:mt-0">
-            <ul class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-                <li><a href="{% url "home" %}" class="hover:underline">Home</a></li>
-                <li><a href="{% url "home" %}#about" class="hover:underline">About</a></li>
-                <li><a href="{% url "home" %}#services" class="hover:underline">Services</a></li>
-                <li><a href="{% url "contact" %}" class="hover:underline">Contact</a></li>
+        <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+            <span class="sr-only">Open main menu</span>
+            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+            </svg>
+        </button>
+        <nav class="hidden w-full md:block md:w-auto" id="navbar-default">
+            <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                <li><a href="{% url "home" %}" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a></li>
+                <li><a href="{% url "home" %}#about" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a></li>
+                <li><a href="{% url "home" %}#services" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a></li>
+                <li><a href="{% url "contact" %}" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a></li>
             </ul>
         </nav>
     </div>
