--- a/users/templates/contact.html
+++ b/users/templates/contact.html
@@ -11,7 +11,8 @@
     <div class="container mx-auto px-4 md:px-0">
         <div class="w-full max-w-lg mx-auto">
             <h1 class="text-2xl md:text-4xl font-bold mb-4">Contact Us</h1>
-            <form method="post">
+            <form enctype="multipart/form-data" method="post" >
+            {% csrf_token %}
             <div class="flex flex-wrap -mx-3 mb-6">
                 <div class="w-full px-3">
                     <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="name">
