--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -17,22 +17,31 @@
             display: inline-block;
             line-height: 1em;
         }
-        .ml6 {
-            position: relative;
-            font-weight: 900;
+        .ml14 {
+            font-weight: 200;
             font-size: 2em;
         }
 
-        .ml6 .text-wrapper {
+        .ml14 .text-wrapper {
             position: relative;
             display: inline-block;
-            padding-top: 0.2em;
+            padding-top: 0.1em;
             padding-right: 0.05em;
-            padding-bottom: 0.1em;
-            overflow: hidden;
+            padding-bottom: 0.15em;
         }
 
-        .ml6 .letter {
+        .ml14 .line {
+            opacity: 0;
+            position: absolute;
+            left: 0;
+            height: 2px;
+            width: 100%;
+            background-color: #fff;
+            transform-origin: 100% 100%;
+            bottom: 0;
+        }
+
+        .ml14 .letter {
             display: inline-block;
             line-height: 1em;
         }
@@ -41,13 +50,14 @@
 <body class="bg-gray-100">
     <!-- Header Section -->
     {% include "header.html" %}
-
     <section class="bg-blue-500 text-white text-center py-8 relative h-screen flex flex-col justify-center">
         <h1 class="ml2 text-4xl font-bold mb-4">Unlock Your Potential with StashCodes</h1>
-        <p class="ml6 text-lg">
+        <p class="ml14 text-lg">
             <span class="text-wrapper">
                 <span class="letters">Embark on an Inspiring Journey of Learning and Growth</span>
+                <span class="line"></span>
             </span>
+            <h1 >
         </p>
     </section>
 
@@ -192,18 +202,28 @@
             delay: 1000
         });
 
-        var textWrapper = document.querySelector('.ml6 .letters');
+        var textWrapper = document.querySelector('.ml14 .letters');
         textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
 
         anime.timeline({loop: true})
         .add({
-            targets: '.ml6 .letter',
-            translateY: ["1.1em", 0],
-            translateZ: 0,
-            duration: 750,
-            delay: (el, i) => 50 * i
+            targets: '.ml14 .line',
+            scaleX: [0,1],
+            opacity: [0.5,1],
+            easing: "easeInOutExpo",
+            duration: 900
         }).add({
-            targets: '.ml6',
+            targets: '.ml14 .letter',
+            opacity: [0,1],
+            translateX: [40,0],
+            translateZ: 0,
+            scaleX: [0.3, 1],
+            easing: "easeOutExpo",
+            duration: 800,
+            offset: '-=600',
+            delay: (el, i) => 150 + 25 * i
+        }).add({
+            targets: '.ml14',
             opacity: 0,
             duration: 1000,
             easing: "easeOutExpo",
