--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -50,7 +50,7 @@
 <body class="bg-gray-100">
     <!-- Header Section -->
     {% include "header.html" %}
-    <section class="bg-blue-500 text-white text-center py-8 relative h-screen flex flex-col justify-center">
+    <section class="bg-blue-500 text-white text-center py-8 relative flex flex-col justify-center" style="height:90vh">
         <h1 class="ml2 text-4xl font-bold mb-4">Unlock Your Potential with StashCodes</h1>
         <p class="ml14 text-lg">
             <span class="text-wrapper">
