--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -22,6 +22,12 @@
             font-size: 2em;
         }
 
+        @media (max-width: 768px) {
+            .ml14 {
+                font-size: 1.5em;
+            }
+        }
+
         .ml14 .text-wrapper {
             position: relative;
             display: inline-block;
