--- a/users/templates/header.html
+++ b/users/templates/header.html
@@ -1,7 +1,7 @@
 <!-- Header Section -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-<header class="bg-blue-500 text-white py-8 px-4">
+<header class="bg-blue-500 text-gray-500 py-8 px-4">
     <div class="container mx-auto flex flex-wrap items-center justify-between">
         <!-- Logo -->
         <a href="{% url "home" %}" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -18,10 +18,10 @@
         </button>
         <nav class="hidden w-full md:block md:w-auto" id="navbar-default">
             <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                <li><a href="{% url "home" %}" class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent" aria-current="page">Home</a></li>
-                <li><a href="{% url "home" %}#about" class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a></li>
-                <li><a href="{% url "home" %}#services" class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a></li>
-                <li><a href="{% url "contact" %}" class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a></li>
+                <li><a href="{% url "home" %}" class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-500 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-gray-500 md:dark:hover:bg-transparent" aria-current="page">Home</a></li>
+                <li><a href="{% url "home" %}#about" class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-500 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-gray-500 md:dark:hover:bg-transparent">About</a></li>
+                <li><a href="{% url "home" %}#services" class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-500 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-gray-500 md:dark:hover:bg-transparent">Services</a></li>
+                <li><a href="{% url "contact" %}" class="block py-2 px-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-500 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-gray-500 md:dark:hover:bg-transparent">Contact</a></li>
             </ul>
         </nav>
     </div>
