--- a/users/templates/header.html
+++ b/users/templates/header.html
@@ -1,7 +1,7 @@
 <!-- Header Section -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-<header class="bg-blue-500 text-gray-500 py-8 px-4">
+<header class="bg-blue-500 text-white py-8 px-4">
     <div class="container mx-auto flex flex-wrap items-center justify-between">
         <!-- Logo -->
         <a href="{% url "home" %}" class="flex items-center space-x-3 rtl:space-x-reverse">
