--- a/users/templates/applyconfirm.html
+++ b/users/templates/applyconfirm.html
@@ -15,7 +15,7 @@
             <div class="w-full max-w-lg mx-auto">
                 <h1 class="text-2xl md:text-4xl font-bold mb-4">Internship Application</h1>
                 <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                    <p class="text-lg text-gray-700">Thank you for applying for the internship program at StashCodes. We have received your application and will get back to you soon.</p>
+                    <p class="text-lg text-gray-700">Thank you for applying for the internship program at StashCodes. We have received your application and will get back to you soon through the email.</p>
                     <p class="text-lg text-gray-700">In the meantime, you can login to our LMS (<a href="https://lms.stashcodes.com">click here</a>).</p>
                 </div>
             </div>
