--- a/users/templates/apply.html
+++ b/users/templates/apply.html
@@ -48,7 +48,7 @@
                     <option value="Java Programming">Java Programming</option>
                     <option value="Python Programming">Python Programming</option>
                     <option value="C++ Programming">C++ Programming</option>
-                    <option value="UI/UX design">UI/UX design</option>
+                    <option value="UI/UX design">Cyber Security</option>
                     <option value="Artificial Intelligence">Artificial Intelligence</option>
                     <option value="Machine Learning">Machine Learning</option>
                 </select>
