--- a/users/templates/apply.html
+++ b/users/templates/apply.html
@@ -114,7 +114,7 @@
             </div>
 
             <div class="mt-4">
-                <button type="submit" class="w-full bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">Submit</button>
+                <button type="submit" class="w-full bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">NEXT</button>
             </div>
         </form>
     </main>
